--- a/index.html
+++ b/index.html
@@ -161,59 +161,65 @@
         <button class="btn text-white bg-primary" type="button" id="more-jobs">Load More</button>
       </div>
     </section>
-    <section class="job-details">
+    <section class="job-details details-page">
       <div class="details-screen">
-        <header>
+        <header class="bg-white">
           <h2 class="clip">Job Details</h2>
           <div class="d-flex justify-content-between align-items-center">
-            <img src="assets/images/sample.png" alt="company-logo">
-            <div>
-              <p>So Digital Inc.</p>
-              <p>sodigital.co</p>
+            <div class="d-flex align-items-center">
+              <img class="logo" src="assets/images/sample.png" alt="company-logo">
+              <div>
+                <p class="text-black company">So Digital Inc.</p>
+                <p>sodigital.co</p>
+              </div>
             </div>
-            <a class="btn text-primary bg-secondary" href="#">Company Site</a>
+            <a class="btn text-primary bg-secondary site-link" href="#">Company Site</a>
           </div>
         </header>
-        <div class="card bg-white">
-          <section>
-            <header>
+        <div class="card bg-white white-sections">
+          <section class="mb-30">
+            <header class="details-intro-header">
               <h3 class="clip">Introduction</h3>
-              <div>
-                <p>Senior Software Engineer</p>
-                <p>
-                  <span>1w ago</span>
-                  <span>Part Time</span>
-                </p>
-                <p>Remote, Seoul, Tokyo, Mountain View, San Francisco</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <p class="type">
+                    <time>1w ago</time>
+                    <span>Part Time</span>
+                  </p>
+                  <div>
+                    <p class="h3 text-black">Senior Software Engineer</p>
+                    <p class="text-primary reduced">Remote, Seoul, Tokyo, Mountain View, San Francisco</p>
+                  </div>
+                </div>
+                <button class="btn text-white bg-primary apply-btn" type="button">Apply Now</button>
               </div>
-              <button type="button">Apply Now</button>
             </header>
-            <p>
+            <p class="mb-15">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa.
             </p>
-            <p>
+            <p class="mb-15">
               Aliquam erat volutpat. Sed ut dui ut lacus dictum fermentum vel tincidunt neque. Sed sed lacinia lectus. Duis sit amet sodales felis. Duis nunc eros, mattis at dui ac, convallis semper risus. In adipiscing ultrices tellus, in suscipit massa vehicula eu.
             </p>
-            <a href="#">See more about our teams here</a>
+            <a class="d-block mb-15 reduced text-primary" href="#">See more about our teams here</a>
           </section>
-          <section>
-            <h3>Requirements</h3>
-            <p>
+          <section class="mb-30">
+            <h3 class="h4 text-black mb-15">Requirements</h3>
+            <p class="mb-15">
               Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa. Aliquam erat volutpat. Sed ut dui ut lacus dictum fermentum vel tincidunt neque. Sed sed lacinia lectus. 
             </p>
-            <ul>
+            <ul class="mb-30">
               <li>Mobi interdum mobilis sapien. Sed</li>
               <li>Phasellus lacinia magna ullamcorper lacreet. lectus arcu pulvinar risus</li>
               <li>Mauris nibh felis, adipiscing varius, adipscing in, lacinia vel, tellus. Suspendissa acurna Etiam pellentesque mauris ut lectus.</li>
               <li>Morbi interdum mollis sapien. Sed</li>
             </ul>
           </section>
-          <section>
-            <h3>What You Will Do</h3>
-            <p>
+          <section class="mb-30">
+            <h3 class="mb-15 h4 text-black">What You Will Do</h3>
+            <p class="mb-15">
               Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa. Aliquam erat volutpat. Sed ut dui ut lacus dictum fermentum vel tincidunt neque. Sed sed lacinia lectus. Duis sit amet sodales felis. Duis nunc eros, mattis at dui ac, convallis semper risus.
             </p>
-            <p>
+            <p class="mb-15">
               Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa. Aliquam erat volutpat. Sed ut dui ut lacus dictum fermentum vel tincidunt neque. Sed sed lacinia lectus.
             </p>
             <ol>
@@ -224,24 +230,24 @@
             </ol>
           </section>
         </div>
-        <section class="card text-white bg-primary">
+        <section class="text-white bg-primary how-to-apply">
           <h3>How to Apply</h3>
           <p>
-  
+            Nam hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa.
           </p>
-          <a href="#">https://examplelink.com/how-to-apply</a>
+          <a class="text-white reduced" href="#">https://examplelink.com/how-to-apply</a>
         </section>
       </div>
     </section>
-    <footer class="bg-white">
-      <div class="d-flex justify-content-between align-items-center details-screen">
-        <div>
-          <p class="text-black">Senior Software Engineer</p>
-          <p>So Digital Inc.</p>
-        </div>
-        <button class="btn text-white bg-primary" type="button">Apply Now</button>
-      </div>
-    </footer>
   </main>
+  <footer class="bg-white details-page details-footer">
+    <div class="d-flex justify-content-between align-items-center details-screen">
+      <div>
+        <p class="text-black h4">Senior Software Engineer</p>
+        <p>So Digital Inc.</p>
+      </div>
+      <button class="btn text-white bg-primary" type="button">Apply Now</button>
+    </div>
+  </footer>
 </body>
 </html>
