--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="index.js"></script>
 </head>
 <body class="themed pages">
   <header class="page-header">
@@ -165,7 +166,10 @@
           </div>
         </article>
       </div>
-      <div class="more-jobs-wrap d-flex justify-content-center">
+      <div class="more-jobs-wrap d-flex justify-content-center" id="loading-wrap">
+        <div class="d-flex justify-content-center loader-wrap">
+
+        </div>
         <button class="btn text-white bg-primary" type="button" id="more-jobs">Load More</button>
       </div>
     </section>
