--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="d-flex justify-content-center loader-wrap">
           <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
         </div>
-        <button class="btn text-white bg-primary" type="button" id="more-jobs">Load More</button>
+        <button class="btn text-white bg-primary more-btn" type="button" id="more-jobs">Load More</button>
       </div>
     </section>
     <section class="job-details details-page">
@@ -84,7 +84,7 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div>
                   <p class="type">
-                    <time id="details-elapsed">1w ago</time>
+                    <span id="details-elapsed" aria-details="2021/03/12">2021/03/12</span>
                     <span id="details-type">Part Time</span>
                   </p>
                   <div>
@@ -92,7 +92,7 @@
                     <p class="text-primary reduced" id="details-location">Remote, Seoul, Tokyo, Mountain View, San Francisco</p>
                   </div>
                 </div>
-                <a href="#details-how-to-apply" class="btn text-white bg-primary apply-btn" type="button">Apply Now</a>
+                <a href="#details-how-to-apply" class="btn text-white bg-primary apply-btn">Apply Now</a>
               </div>
             </header>
             <div class="mb-15 details-body" id="details-body">
@@ -117,7 +117,7 @@
       </div>
       <button class="btn text-white bg-primary" type="button">Apply Now</button>
     </div>
-    <button class="position-fixed btn back-btn text-white" id="back-btn">
+    <button class="position-fixed btn back-btn text-white" id="back-btn" type="button">
       <span>&#8592;</span>
     </button>
   </footer>
